// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should have same snapshot when hidden 1`] = `
<DocumentFragment>
  <div
    class="sc-ksdxgE beWSEi"
  >
    <div
      class="sc-hBUSln cFZxiX"
    >
      <span
        class="sc-dkPtRN dSzjxW"
        color="#444"
      >
        Character Details
      </span>
      <div
        class="sc-fotOHu iLjeNh"
      />
      <footer
        class="sc-fFeiMQ ldKoWl"
      >
        <button
          class="sc-bdvvtL kMWQOy"
          color="teal"
          data-testid="button"
        >
          Close
        </button>
      </footer>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal should have same snapshot when visible 1`] = `
<DocumentFragment>
  <div
    class="sc-ksdxgE dtjEpx"
  >
    <div
      class="sc-hBUSln cFZxiX"
    >
      <span
        class="sc-dkPtRN dSzjxW"
        color="#444"
      >
        Character Details
      </span>
      <div
        class="sc-fotOHu iLjeNh"
      >
        <span
          class="sc-dkPtRN jkAsmV"
          color="#444"
        >
          Sample
        </span>
      </div>
      <footer
        class="sc-fFeiMQ ldKoWl"
      >
        <button
          class="sc-bdvvtL kMWQOy"
          color="teal"
          data-testid="button"
        >
          Close
        </button>
      </footer>
    </div>
  </div>
</DocumentFragment>
`;
